--- a/ch6.html
+++ b/ch6.html
@@ -55,7 +55,7 @@
 <body>
     <div class="challenge-box">
         <h2>Challenge 6: MD5 Hashing</h2>
-        <p>Below is an MD5 hash of a common word. Crack it to find the flag.</p>
+        <p>Below is an MD5 hash of a common word. Crack it to find the flag. Then wrap the md5 decoded text around ABM{} to get the final flag!</p>
         <div class="md5-hash">
             5f4dcc3b5aa765d61d8327deb882cf99
         </div>
