--- a/ch7.html
+++ b/ch7.html
@@ -55,7 +55,7 @@
 <body>
     <div class="challenge-box">
         <h2>Challenge 7: SHA-256 Hashing</h2>
-        <p>Below is a SHA-256 hash. Crack it to find the flag.</p>
+        <p>Below is a SHA-256 hash. Crack it to find the flag. Then wrap the SHA decoded text around ABM{} to get the final flag!</p>
         <div class="sha256-hash">
             18c9177b227ab6c2f0ee9da58bad4c0f958be8346ec24ff22dac1f96efc4a03c
         </div>
