--- a/ch8.html
+++ b/ch8.html
@@ -57,8 +57,9 @@
         <h2>Challenge 8: Leet Speak</h2>
         <p>Translate the following leet speak to find the flag:</p>
         <div class="leet-speak">
-            48M13375P34K15FUN 
+            1N_1337 
         </div>
+        <br>Wrap ABM{} to get the flag!
         <div class="return-home">
             <a href="home.html">
                 <button>Return Home</button>
